UPDATED all files with Javadoc comments